src/JazLabs/hardware/digHolo/digHolo_v1.0.0/Examples/Matlab/digHolo.h

typedef float complex64;
typedef float complex64[2];
EXT_C int digHoloConfigSetFillFactorCorrectionEnabled(int handleIdx, int enabled);
EXT_C int digHoloConfigGetFillFactorCorrectionEnabled(int handleIdx);
EXT_C int digHoloSetBatch(int handleIdx, int batchCount, float* frameBuffer);
EXT_C int digHoloSetBatchAvg(int handleIdx, int batchCount, float* frameBuffer, int avgCount, int avgMode);
EXT_C int digHoloSetBatchUint16(int handleIdx, int batchCount, unsigned short* frameBuffer, int transpose);
EXT_C int digHoloSetBatchAvgUint16(int handleIdx, int batchCount, unsigned short* frameBuffer, int avgCount, int avgMode, int transpose);
EXT_C int digHoloConfigSetBatchCount(int handleIdx, int batchCount);
EXT_C int digHoloConfigGetBatchCount(int handleIdx);
EXT_C int digHoloConfigSetBatchAvgCount(int handleIdx, int avgCount);
EXT_C int digHoloConfigGetBatchAvgCount(int handleIdx);
EXT_C int digHoloConfigSetBatchCalibration(int handleIdx, complex64* cal, int polCount, int batchCount);
EXT_C complex64* digHoloConfigGetBatchCalibration(int handleIdx, int *polCount, int *batchCount);
EXT_C int digHoloConfigSetBatchCalibrationFromFile(int handleIdx, const char* fname, int polCount, int batchCount);
EXT_C int digHoloConfigSetBatchCalibrationEnabled(int handleIdx, int enabled);
EXT_C int digHoloConfigGetBatchCalibrationEnabled(int handleIdx);
EXT_C int digHoloConfigSetBatchAvgMode(int handleIdx, int avgMode);
EXT_C int digHoloConfigGetBatchAvgMode(int handleIdx);
EXT_C int digHoloConfigSetfftWindowSize(int handleIdx, int width, int height);
EXT_C int digHoloConfigGetfftWindowSize(int handleIdx, int *width, int *height);
EXT_C int digHoloConfigSetfftWindowSizeX(int handleIdx, int width);
EXT_C int digHoloConfigGetfftWindowSizeX(int handleIdx);
EXT_C int digHoloConfigGetfftWindowSizeY(int handleIdx);
EXT_C int digHoloConfigSetfftWindowSizeY(int handleIdx, int height);
EXT_C int digHoloConfigSetFourierWindowRadius(int handleIdx, float windowRadius);
EXT_C float digHoloConfigGetFourierWindowRadius(int handleIdx);
EXT_C int digHoloConfigSetIFFTResolutionMode(int handleIdx, int resolutionModeIdx);