src/JazLabs/hardware/digHolo/digHolo_v1.0.0/src/digholoHeader.py


# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 449
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetFillFactorCorrectionEnabled", "cdecl"):
        continue
    digHoloConfigSetFillFactorCorrectionEnabled = _lib.get("digHoloConfigSetFillFactorCorrectionEnabled", "cdecl")
    digHoloConfigSetFillFactorCorrectionEnabled.argtypes = [c_int, c_int]
    digHoloConfigSetFillFactorCorrectionEnabled.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 460
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetFillFactorCorrectionEnabled", "cdecl"):
        continue
    digHoloConfigGetFillFactorCorrectionEnabled = _lib.get("digHoloConfigGetFillFactorCorrectionEnabled", "cdecl")
    digHoloConfigGetFillFactorCorrectionEnabled.argtypes = [c_int]
    digHoloConfigGetFillFactorCorrectionEnabled.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 483
for _lib in _libs.values():
    if not _lib.has("digHoloSetBatch", "cdecl"):
        continue
    digHoloSetBatch = _lib.get("digHoloSetBatch", "cdecl")
    digHoloSetBatch.argtypes = [c_int, c_int, POINTER(c_float)]
    digHoloSetBatch.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 502
for _lib in _libs.values():
    if not _lib.has("digHoloSetBatchAvg", "cdecl"):
        continue
    digHoloSetBatchAvg = _lib.get("digHoloSetBatchAvg", "cdecl")
    digHoloSetBatchAvg.argtypes = [c_int, c_int, POINTER(c_float), c_int, c_int]
    digHoloSetBatchAvg.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 519
for _lib in _libs.values():
    if not _lib.has("digHoloSetBatchUint16", "cdecl"):
        continue
    digHoloSetBatchUint16 = _lib.get("digHoloSetBatchUint16", "cdecl")
    digHoloSetBatchUint16.argtypes = [c_int, c_int, POINTER(c_ushort), c_int]
    digHoloSetBatchUint16.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 540
for _lib in _libs.values():
    if not _lib.has("digHoloSetBatchAvgUint16", "cdecl"):
        continue
    digHoloSetBatchAvgUint16 = _lib.get("digHoloSetBatchAvgUint16", "cdecl")
    digHoloSetBatchAvgUint16.argtypes = [c_int, c_int, POINTER(c_ushort), c_int, c_int, c_int]
    digHoloSetBatchAvgUint16.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 551
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBatchCount", "cdecl"):
        continue
    digHoloConfigSetBatchCount = _lib.get("digHoloConfigSetBatchCount", "cdecl")
    digHoloConfigSetBatchCount.argtypes = [c_int, c_int]
    digHoloConfigSetBatchCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 559
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetBatchCount", "cdecl"):
        continue
    digHoloConfigGetBatchCount = _lib.get("digHoloConfigGetBatchCount", "cdecl")
    digHoloConfigGetBatchCount.argtypes = [c_int]
    digHoloConfigGetBatchCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 570
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBatchAvgCount", "cdecl"):
        continue
    digHoloConfigSetBatchAvgCount = _lib.get("digHoloConfigSetBatchAvgCount", "cdecl")
    digHoloConfigSetBatchAvgCount.argtypes = [c_int, c_int]
    digHoloConfigSetBatchAvgCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 580
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetBatchAvgCount", "cdecl"):
        continue
    digHoloConfigGetBatchAvgCount = _lib.get("digHoloConfigGetBatchAvgCount", "cdecl")
    digHoloConfigGetBatchAvgCount.argtypes = [c_int]
    digHoloConfigGetBatchAvgCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 599
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBatchCalibration", "cdecl"):
        continue
    digHoloConfigSetBatchCalibration = _lib.get("digHoloConfigSetBatchCalibration", "cdecl")
    digHoloConfigSetBatchCalibration.argtypes = [c_int, POINTER(complex64), c_int, c_int]
    digHoloConfigSetBatchCalibration.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 611
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetBatchCalibration", "cdecl"):
        continue
    digHoloConfigGetBatchCalibration = _lib.get("digHoloConfigGetBatchCalibration", "cdecl")
    digHoloConfigGetBatchCalibration.argtypes = [c_int, POINTER(c_int), POINTER(c_int)]
    digHoloConfigGetBatchCalibration.restype = POINTER(complex64)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 624
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBatchCalibrationFromFile", "cdecl"):
        continue
    digHoloConfigSetBatchCalibrationFromFile = _lib.get("digHoloConfigSetBatchCalibrationFromFile", "cdecl")
    digHoloConfigSetBatchCalibrationFromFile.argtypes = [c_int, String, c_int, c_int]
    digHoloConfigSetBatchCalibrationFromFile.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 635
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBatchCalibrationEnabled", "cdecl"):
        continue
    digHoloConfigSetBatchCalibrationEnabled = _lib.get("digHoloConfigSetBatchCalibrationEnabled", "cdecl")
    digHoloConfigSetBatchCalibrationEnabled.argtypes = [c_int, c_int]
    digHoloConfigSetBatchCalibrationEnabled.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 645
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetBatchCalibrationEnabled", "cdecl"):
        continue
    digHoloConfigGetBatchCalibrationEnabled = _lib.get("digHoloConfigGetBatchCalibrationEnabled", "cdecl")
    digHoloConfigGetBatchCalibrationEnabled.argtypes = [c_int]
    digHoloConfigGetBatchCalibrationEnabled.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 670
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBatchAvgMode", "cdecl"):
        continue
    digHoloConfigSetBatchAvgMode = _lib.get("digHoloConfigSetBatchAvgMode", "cdecl")
    digHoloConfigSetBatchAvgMode.argtypes = [c_int, c_int]
    digHoloConfigSetBatchAvgMode.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 680
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetBatchAvgMode", "cdecl"):
        continue
    digHoloConfigGetBatchAvgMode = _lib.get("digHoloConfigGetBatchAvgMode", "cdecl")
    digHoloConfigGetBatchAvgMode.argtypes = [c_int]
    digHoloConfigGetBatchAvgMode.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 701
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetfftWindowSize", "cdecl"):
        continue
    digHoloConfigSetfftWindowSize = _lib.get("digHoloConfigSetfftWindowSize", "cdecl")
    digHoloConfigSetfftWindowSize.argtypes = [c_int, c_int, c_int]
    digHoloConfigSetfftWindowSize.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 712
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetfftWindowSize", "cdecl"):
        continue
    digHoloConfigGetfftWindowSize = _lib.get("digHoloConfigGetfftWindowSize", "cdecl")
    digHoloConfigGetfftWindowSize.argtypes = [c_int, POINTER(c_int), POINTER(c_int)]
    digHoloConfigGetfftWindowSize.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 722
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetfftWindowSizeX", "cdecl"):
        continue
    digHoloConfigSetfftWindowSizeX = _lib.get("digHoloConfigSetfftWindowSizeX", "cdecl")
    digHoloConfigSetfftWindowSizeX.argtypes = [c_int, c_int]
    digHoloConfigSetfftWindowSizeX.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 730
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetfftWindowSizeX", "cdecl"):
        continue
    digHoloConfigGetfftWindowSizeX = _lib.get("digHoloConfigGetfftWindowSizeX", "cdecl")
    digHoloConfigGetfftWindowSizeX.argtypes = [c_int]
    digHoloConfigGetfftWindowSizeX.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 739
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetfftWindowSizeY", "cdecl"):
        continue
    digHoloConfigGetfftWindowSizeY = _lib.get("digHoloConfigGetfftWindowSizeY", "cdecl")
    digHoloConfigGetfftWindowSizeY.argtypes = [c_int]
    digHoloConfigGetfftWindowSizeY.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 749
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetfftWindowSizeY", "cdecl"):
        continue
    digHoloConfigSetfftWindowSizeY = _lib.get("digHoloConfigSetfftWindowSizeY", "cdecl")
    digHoloConfigSetfftWindowSizeY.argtypes = [c_int, c_int]
    digHoloConfigSetfftWindowSizeY.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 766
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetFourierWindowRadius", "cdecl"):
        continue
    digHoloConfigSetFourierWindowRadius = _lib.get("digHoloConfigSetFourierWindowRadius", "cdecl")
    digHoloConfigSetFourierWindowRadius.argtypes = [c_int, c_float]
    digHoloConfigSetFourierWindowRadius.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 774
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetFourierWindowRadius", "cdecl"):
        continue
    digHoloConfigGetFourierWindowRadius = _lib.get("digHoloConfigGetFourierWindowRadius", "cdecl")
    digHoloConfigGetFourierWindowRadius.argtypes = [c_int]
    digHoloConfigGetFourierWindowRadius.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 786
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetIFFTResolutionMode", "cdecl"):
        continue
    digHoloConfigSetIFFTResolutionMode = _lib.get("digHoloConfigSetIFFTResolutionMode", "cdecl")
    digHoloConfigSetIFFTResolutionMode.argtypes = [c_int, c_int]
    digHoloConfigSetIFFTResolutionMode.restype = c_int
    break
